tests/snapshots/cli__list_files_json_workspace.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "package": "main",
    "path": "main/src/main.rs"
  },
  {
    "package": "main2",
    "path": "main2/src/main.rs"
  },
  {
    "package": "utils",
    "path": "utils/src/lib.rs"
  }
]
