tests/snapshots/cli__list_files_text_well_tested.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
src/inside_mod.rs
src/item_mod.rs
src/lib.rs
src/methods.rs
src/nested_function.rs
src/result.rs
src/simple_fns.rs

