tests/snapshots/cli__list_mutants_in_cfg_attr_test_skip.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
src/lib.rs:17: replace double -> usize with Default::default()

