tests/snapshots/cli__list_mutants_in_factorial.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"

---
src/bin/main.rs:1: replace main with ()
src/bin/main.rs:7: replace factorial -> u32 with Default::default()

