tests/snapshots/cli__list_mutants_in_factorial_json.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"

---
[
  {
    "function_name": "main",
    "op": "Unit"
  },
  {
    "function_name": "factorial",
    "op": "Default"
  }
]
