tests/snapshots/cli__list_mutants_json_for_testdata_tree_sites.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"

---
[
  {
    "file": "src/inside_mod.rs",
    "line": 3,
    "function": "outer::inner::name",
    "replacement": "Default::default()"
  },
  {
    "file": "src/lib.rs",
    "line": 15,
    "function": "returns_unit",
    "replacement": "()"
  },
  {
    "file": "src/lib.rs",
    "line": 20,
    "function": "returns_42u32",
    "replacement": "Default::default()"
  },
  {
    "file": "src/lib.rs",
    "line": 25,
    "function": "returns_true",
    "replacement": "true"
  },
  {
    "file": "src/lib.rs",
    "line": 25,
    "function": "returns_true",
    "replacement": "false"
  },
  {
    "file": "src/lib.rs",
    "line": 34,
    "function": "double_string",
    "replacement": "\"\".into()"
  },
  {
    "file": "src/lib.rs",
    "line": 34,
    "function": "double_string",
    "replacement": "\"xyzzy\".into()"
  },
  {
    "file": "src/result.rs",
    "line": 5,
    "function": "simple_result",
    "replacement": "Ok(Default::default())"
  },
  {
    "file": "src/result.rs",
    "line": 9,
    "function": "error_if_negative",
    "replacement": "Ok(Default::default())"
  }
]
