tests/snapshots/cli__list_mutants_json_well_tested.snap
---
source: tests/cli.rs
assertion_line: 41
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "file": "src/inside_mod.rs",
    "line": 3,
    "function": "outer::inner::name",
    "return_type": "-> & 'static str",
    "replacement": "Default::default()"
  },
  {
    "file": "src/methods.rs",
    "line": 12,
    "function": "Foo::double",
    "return_type": "",
    "replacement": "()"
  },
  {
    "file": "src/methods.rs",
    "line": 18,
    "function": "<impl Display for Foo>::fmt",
    "return_type": "-> fmt :: Result",
    "replacement": "Ok(Default::default())"
  },
  {
    "file": "src/methods.rs",
    "line": 24,
    "function": "<impl Debug for & Foo>::fmt",
    "return_type": "-> fmt :: Result",
    "replacement": "Ok(Default::default())"
  },
  {
    "file": "src/nested_function.rs",
    "line": 1,
    "function": "has_nested",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  },
  {
    "file": "src/nested_function.rs",
    "line": 2,
    "function": "has_nested::inner",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  },
  {
    "file": "src/result.rs",
    "line": 5,
    "function": "simple_result",
    "return_type": "-> Result < & 'static str , () >",
    "replacement": "Ok(Default::default())"
  },
  {
    "file": "src/result.rs",
    "line": 9,
    "function": "error_if_negative",
    "return_type": "-> Result < () , () >",
    "replacement": "Ok(Default::default())"
  },
  {
    "file": "src/simple_fns.rs",
    "line": 7,
    "function": "returns_unit",
    "return_type": "",
    "replacement": "()"
  },
  {
    "file": "src/simple_fns.rs",
    "line": 12,
    "function": "returns_42u32",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  },
  {
    "file": "src/simple_fns.rs",
    "line": 17,
    "function": "divisible_by_three",
    "return_type": "-> bool",
    "replacement": "true"
  },
  {
    "file": "src/simple_fns.rs",
    "line": 17,
    "function": "divisible_by_three",
    "return_type": "-> bool",
    "replacement": "false"
  },
  {
    "file": "src/simple_fns.rs",
    "line": 26,
    "function": "double_string",
    "return_type": "-> String",
    "replacement": "\"\".into()"
  },
  {
    "file": "src/simple_fns.rs",
    "line": 26,
    "function": "double_string",
    "return_type": "-> String",
    "replacement": "\"xyzzy\".into()"
  }
]
