tests/snapshots/cli__list_mutants_regex_anchored_matches_full_line.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
src/simple_fns.rs:7: replace returns_unit with ()

